# kay

./: .env.example  .forge.toml  .forgecode-upstream-sha  .gitignore  .silver-bullet.json  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  NOTICE  README.md  SECURITY.md  ai-models-ranking.md  deny.toml  forge-context.md  rust-toolchain.toml  silver-bullet.md
crates/forge_api/: Cargo.toml
crates/forge_api/tests/: api.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: command_generator.rs  compact.rs  system_prompt.rs
crates/forge_app/src/snapshots/: forge_app__command_generator__tests__generate_simple_command.snap  forge_app__command_generator__tests__generate_with_no_files.snap
crates/forge_app/tests/: app.rs
crates/forge_ci/: Cargo.toml
crates/forge_ci/src/: lib.rs
crates/forge_ci/tests/: ci.rs
crates/forge_config/: .forge.toml  Cargo.toml
crates/forge_config/src/: reader.rs
crates/forge_config/tests/: config.rs
crates/forge_display/: Cargo.toml
crates/forge_display/tests/: display.rs
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: system_context.rs
crates/forge_domain/src/snapshots/: forge_domain__conversation_html__tests__conversation.snap.html
crates/forge_domain/tests/: domain.rs
crates/forge_embed/: Cargo.toml
crates/forge_embed/tests/: embed.rs
crates/forge_fs/: Cargo.toml
crates/forge_fs/tests/: fs.rs
crates/forge_infra/: Cargo.toml
crates/forge_infra/tests/: infra.rs
crates/forge_json_repair/: Cargo.toml
crates/forge_json_repair/tests/: repair.rs
crates/forge_main/: Cargo.toml
crates/forge_main/tests/: main_integration.rs
crates/forge_markdown_stream/: Cargo.toml
crates/forge_markdown_stream/tests/: markdown.rs
crates/forge_repo/: Cargo.toml
crates/forge_repo/src/conversation/: conversation_repo.rs
crates/forge_repo/tests/: repo.rs
crates/forge_select/: Cargo.toml
crates/forge_services/: Cargo.toml
crates/forge_services/tests/: services.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/tests/: snaps.rs
crates/forge_spinner/: Cargo.toml
crates/forge_spinner/tests/: spinner.rs
crates/forge_stream/: Cargo.toml
crates/forge_stream/tests/: stream.rs
crates/forge_template/: Cargo.toml
crates/forge_template/tests/: template.rs
crates/forge_test_kit/: Cargo.toml
crates/forge_test_kit/tests/: kit.rs
crates/forge_tool_macros/: Cargo.toml
crates/forge_tool_macros/tests/: macros.rs  test_description.txt
crates/forge_tool_macros/tests/pass/: derive_basic.rs  derive_generics.rs
crates/forge_tracker/: Cargo.toml
crates/forge_tracker/tests/: tracker.rs
crates/forge_walker/: Cargo.toml
crates/forge_walker/tests/: walker.rs
crates/kay-cli/: Cargo.toml
crates/kay-cli/src/: banner 2  banner.rs  boot 2.rs  boot.rs  diff.rs  eval.rs  exit.rs  help.rs  interactive 2.rs  interactive.rs  main.rs  markdown.rs  prompt.rs  render.rs  run 2.rs  run.rs  session.rs  spinner.rs
crates/kay-cli/src/commands/: build.rs  check.rs  clippy.rs  fmt.rs  mod.rs  review.rs  test.rs
crates/kay-cli/tests/: cli_e2e.rs  cli_parity_negative.rs  context_e2e.rs  context_smoke.rs  live_smoke.rs  session_e2e.rs
crates/kay-cli/tests/fixtures/: forgecode-banner.txt  forgecode-prompt.txt
crates/kay-config/: Cargo.toml  kay.toml
crates/kay-config/src/: lib.rs
crates/kay-context/: Cargo.toml
crates/kay-context/src/: budget.rs  embedder.rs  engine.rs  error.rs  hardener.rs  indexer.rs  language.rs  lib.rs  retriever.rs  store.rs  watcher.rs
crates/kay-context/tests/: budget.rs  hardener.rs  indexer.rs  retriever_fts.rs  retriever_vec.rs  store.rs  watcher.rs
crates/kay-core/: Cargo.toml  NOTICE
crates/kay-core/personas/: forge.yaml  muse 2.yaml  muse.yaml  sage 2.yaml
crates/kay-core/src/: control.rs  event_filter 2.rs  event_filter.rs  lib.rs  loop.rs  persona.rs  planner.rs  retry.rs
crates/kay-core/src/forge_api/: api.rs  forge_api.rs  mod.rs
crates/kay-core/src/forge_app/: agent.rs  agent_executor.rs  agent_provider_resolver.rs  app.rs  apply_tunable_parameters.rs  changed_files.rs  command_generator.rs  compact.rs  data_gen.rs  error.rs  file_tracking.rs  git_app.rs  infra.rs  init_conversation_metrics.rs  mcp_executor.rs  operation.rs  orch.rs  retry.rs  search_dedup.rs  services.rs  set_conversation_id.rs  system_prompt.rs  template_engine.rs  terminal_context.rs  title_generator.rs  tool_executor.rs  tool_registry.rs  tool_resolver.rs  user_prompt.rs  utils.rs  workspace_status.rs
crates/kay-core/src/forge_config/: compact.rs  config.rs  legacy.rs  percentage.rs  reader.rs  writer.rs
crates/kay-core/src/forge_display/: markdown.rs
crates/kay-core/src/forge_domain/: agent.rs  attachment.rs  chat_request.rs  chat_response.rs  context.rs  conversation.rs  conversation_html.rs  env.rs  error.rs  event.rs  file_operation.rs  hook.rs  mcp_servers.rs  message.rs  message_pattern.rs  migration.rs  model_config.rs  node.rs  provider.rs  repo.rs  result_stream_ext.rs  session_metrics.rs  system_context.rs  tool_order.rs
crates/kay-core/src/forge_fs/: meta.rs  mod.rs  read_range.rs
crates/kay-core/src/forge_infra/: console.rs  env.rs  executor.rs  forge_infra.rs  fs_create_dirs.rs  fs_meta.rs  fs_read.rs  fs_read_dir.rs  fs_remove.rs  fs_write.rs  http.rs  inquire.rs  mcp_client.rs  mcp_server.rs  mod.rs  walker.rs
crates/kay-core/src/forge_json_repair/: parser.rs  schema_coercion.rs
crates/kay-core/src/forge_main/: banner.rs  cli.rs  conversation_selector.rs  editor.rs  error.rs  info.rs  input.rs  main.rs  model.rs  oauth_callback.rs  porcelain.rs  state.rs  (+9 more)
crates/kay-core/tests/: control.rs  event_filter.rs  event_filter_exhaustive_guard.rs  event_filter_property.rs  loop.rs  loop_dispatcher_integration.rs  loop_pause_tool_call_buffered.rs  loop_property.rs  loop_sage_query_integration.rs  persona.rs  rework_loop.rs
crates/kay-display/: Cargo.toml
crates/kay-display/src/: lib.rs  markdown.rs  spinner.rs  theme.rs
crates/kay-json-repair/: Cargo.toml
crates/kay-json-repair/src/: lib.rs
(+841 files in other folders)
