[workspace]
resolver = "2"
# Explicit member list (matches codex-rs convention per CONTEXT.md D-05).
# Stray directories under crates/ are NOT auto-included. Update this list when
# adding a crate.
members = [
    "crates/kay-cli",
    "crates/kay-config",
    "crates/kay-context",
    "crates/kay-core",
    "crates/kay-provider-errors",
    "crates/kay-provider-openrouter",
    "crates/kay-provider-minimax",
    "crates/kay-sandbox-linux",
    "crates/kay-sandbox-macos",
    "crates/kay-sandbox-policy",
    "crates/kay-sandbox-windows",
    "crates/kay-tauri",
    "crates/kay-template",
    "crates/kay-json-repair",
    "crates/kay-tools",
    "crates/kay-session",
    "crates/kay-tui",
    "crates/kay-verifier",
    "crates/forge_tool_macros",
    "crates/forge_template",
    "crates/forge_json_repair",
    "crates/forge_stream",
    "crates/forge_test_kit",
    "crates/forge_embed",
    "crates/forge_ci",
    "crates/forge_walker",
    "crates/kay-context",
    "crates/kay-verifier",
    "crates/forge_markdown_stream",
    "crates/forge_select",
    "crates/forge_display",
    "crates/forge_config",
    "crates/forge_domain",
    "crates/forge_spinner",
    "crates/forge_tracker",
    "crates/forge_fs",
    "crates/forge_snaps",
    "crates/forge_app",
    "crates/forge_services",
    "crates/forge_infra",
    "crates/forge_repo",
    "crates/forge_api",
    "crates/forge_main",
    "crates/kay-display",
    "crates/kay-repo",
]

[workspace.package]
# Semver with a non-standard rule: never cut a major release. Any would-be
# major bump is treated as minor. See docs/knowledge/2026-04.md §Key Decisions.
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Kay Contributors <contributors@kay.dev>"]
license = "Apache-2.0"
repository = "https://github.com/alo-exp/kay"
homepage = "https://github.com/alo-exp/kay"
description = "Open-source terminal coding agent — Rust fork of ForgeCode with KIRA harness and Tauri desktop UI"

[workspace.dependencies]
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "io-util", "process", "signal", "sync", "fs", "time"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "hickory-dns", "http2", "stream", "gzip", "brotli"] }
reqwest-eventsource = "0.6"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"

# Serialization/Data
serde_yml = "0.0.12"
toml_edit = { version = "0.25", features = ["serde"] }
base64 = "0.22"
merge = "0.2"
convert_case = "0.11.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
serde_json5 = "0.2.1"
serde_urlencoded = "0.7.1"
html-escape = "0.2.13"

# Async/Network
async-trait = "0.1"
async-recursion = "1"
futures = "0.3"
tokio-stream = "0.1"
tonic = { version = "0.14.5", features = ["tls-webpki-roots"] }
prost = "0.14.3"
prost-types = "0.14.3"
eventsource-stream = "0.2"
google-cloud-auth = "1.8"
backon = "1"
oauth2 = { version = "5.0", features = ["reqwest"] }

# CLI/TUI
reedline = "0.47.0"
crossterm = "0.29.0"
nu-ansi-term = "0.50"
clap_complete = "4.5"
console = "0.16"
colored = "3"
fzf-wrapped = "0.1"
rustyline = "18"
terminal_size = "0.4"
arboard = { version = "3.4", default-features = false }
enable-ansi-support = "0.3"

# Parsing/Text
nom = "8.0.0"
regex = "1"
html2md = "0.2"
handlebars = "6"
gray_matter = "0.3.2"
strip-ansi-escapes = "0.2"
similar = { version = "3", features = ["inline"] }
termimad = "0.34"
syntect = "5"
two-face = "0.5.1"
unicode-width = "0.2"
include_dir = "0.7"

# Data Structures
indexmap = { version = "2", features = ["serde"] }
dashmap = "6"
fnv_rs = "0.4"
derive_more = { version = "2.1.1", features = ["from", "display", "debug", "deref", "as_ref", "try_into"] }
derive_setters = "0.1"
derive-getters = "0.5.0"
strum = "0.28.0"
strum_macros = "0.28.0"
fake = { version = "5.1.0", features = ["derive"] }
lazy_static = "1.5.0"

# Database
diesel = { version = "2.3.7", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
diesel_migrations = "2.2.0"

# Utilities
dirs = "6"
dotenvy = "0.15"
tempfile = "3"
url = { version = "2", features = ["serde"] }
http = "1"
bytes = "1"
humantime = "2.1.0"
num-format = "0.4"
sha2 = "0.11"
hex = "0.4"
infer = "0.19.0"
open = "5"
whoami = "2.1.0"
machineid-rs = "1.2.4"
sysinfo = "0.38"
gix = { version = "0.83", default-features = false, features = ["max-performance-safe"] }
update-informer = "1.2.0"
cacache = { version = "13.1.0", default-features = false, features = ["tokio-runtime"] }
rmcp = { version = "0.10", features = ["client", "transport-sse-client-reqwest", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
tiny_http = "0.12"
posthog-rs = "0.6.0"
tracing-appender = "0.2"
grep-searcher = "0.1"
grep-regex = "0.1"
ignore = "0.4"
rand = "0.10.0"
indicatif = "0.18.4"
async-openai = { version = "0.36", default-features = false, features = ["response-types"] }
config = "0.15"

# AWS/Cloud
aws-sdk-bedrockruntime = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
aws-smithy-runtime = "1"
aws-smithy-async = "1"

# Proc-macro support
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Dev-dependencies (test-only) used by imported forge_* sub-crates.
# Declared here so individual crate Cargo.tomls can inherit via workspace.
pretty_assertions = "1"
insta = { version = "1", features = ["yaml", "json"] }
mockito = "1"
proptest = "1"

# Phase 3 (kay-tools) additions
portable-pty = "0.9"
subtle = "2.6"
nix = { version = "0.31", features = ["signal"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Phase 7 (kay-context) additions
rusqlite              = { version = "0.38", features = ["bundled"] }
tree-sitter           = "0.26"
tree-sitter-rust      = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python    = "0.25"
tree-sitter-go        = "0.25"
sqlite-vec            = "=0.1.9"
notify                = "8.2"
notify-debouncer-mini = "0.7"

# Phase 5 (kay-cli) additions
# assert_cmd + predicates pair for subprocess E2E tests of the `kay` binary
# (Wave 7 T7.1: exit codes, JSONL stream, --help parity). Consumer:
# crates/kay-cli [dev-dependencies] — see .planning/phases/05-agent-loop/05-DEPENDENCIES.md §3.2.
assert_cmd = "2"
predicates = "3"

# Phase 9 (kay-tauri) additions
# = pins on RC packages to prevent accidental upgrades; specta version must
# match exactly what tauri-specta declares in its own Cargo.toml.
# RC.24 is latest available on crates.io (2026-04-24).
tauri             = { version = "2.3", features = ["rustls-tls", "wry"] }
tauri-build       = { version = "2.3" }
tauri-specta      = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta            = { version = "=2.0.0-rc.24", features = ["serde_json"] }  # must match tauri-specta's dep
specta-typescript = "0.0.11"

# Phase 9.5 (kay-tui) additions
# ratatui ≥ 0.27 (satisfies spec requirement). Pin minor to avoid accidental
# breaking changes; bump intentionally per Phase milestone.
ratatui = "0.30"

# Platform-specific
windows-sys = { version = "0.61", features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Security", "Win32_System_JobObjects"] }
landlock    = "0.4"
seccompiler = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.dependencies.kay-display]
path = "crates/kay-display"
