[package]
name = "forge_display"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode display and syntax highlighting"

[dependencies]
derive_setters = { workspace = true }
similar = { workspace = true }
console = { workspace = true }
regex = { workspace = true }
termimad = { workspace = true }
syntect = { workspace = true }
terminal-colorsaurus = "1.0.3"
two-face = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta             = { workspace = true }
strip-ansi-escapes = { workspace = true }
