[package]
name = "forge_embed"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode embedded asset utilities"

[dependencies]
include_dir = { workspace = true }
handlebars = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
insta      = { workspace = true }
tempfile   = { workspace = true }
assert_cmd = { workspace = true }
include_dir = { workspace = true }

[[test]]
name = "embed"
path = "tests/embed.rs"
