[package]
name = "forge_repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode repository layer (provider clients, agents)"

[dependencies]
forge_app         = { path = "../forge_app" }
forge_config      = { path = "../forge_config" }
forge_domain      = { path = "../forge_domain" }
forge_infra       = { path = "../forge_infra" }
forge_snaps       = { path = "../forge_snaps" }
forge_fs          = { path = "../forge_fs" }
forge_template    = { path = "../forge_template" }
forge_json_repair = { path = "../forge_json_repair" }

anyhow = { workspace = true }
backon = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
strum = { workspace = true }
reqwest-eventsource = { workspace = true }
eventsource-stream = { workspace = true }
handlebars = { workspace = true }
merge = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-credential-types = { workspace = true }
aws-smithy-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-async = { workspace = true }
aws-smithy-runtime = { workspace = true }
lazy_static = { workspace = true }
derive_setters = { workspace = true }
base64 = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
gray_matter = { workspace = true }
dirs = { workspace = true }
async-openai = { workspace = true }
regex = { workspace = true }
google-cloud-auth = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
