[package]
name = "forge_services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode service layer"

[dependencies]
forge_snaps  = { path = "../forge_snaps" }
forge_stream = { path = "../forge_stream" }
forge_fs     = { path = "../forge_fs" }
forge_app    = { path = "../forge_app" }
forge_domain = { path = "../forge_domain" }
forge_config = { path = "../forge_config" }

chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_setters = { workspace = true }
tokio-stream = { workspace = true }
handlebars = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
derive_more = { workspace = true }
regex = { workspace = true }
backon = { workspace = true }
humantime = { workspace = true }
thiserror = { workspace = true }
html2md = { workspace = true }
glob = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
ignore = { workspace = true }
base64 = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
bytes = { workspace = true }
serde_yml = { workspace = true }
gray_matter = { workspace = true }
merge = { workspace = true }
strip-ansi-escapes = { workspace = true }
url = { workspace = true }
reqwest-eventsource = { workspace = true }
lazy_static = { workspace = true }
oauth2 = { workspace = true }
serde_urlencoded = { workspace = true }
http = { workspace = true }
infer = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
async-stream = "0.3"
