[package]
name = "forge_snaps"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode pre-edit snapshots"

[dependencies]
forge_fs     = { path = "../forge_fs" }
forge_domain = { path = "../forge_domain" }

anyhow = { workspace = true }
fnv_rs = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
