[package]
name = "forge_stream"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode streaming utilities"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
