[package]
name = "forge_template"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode template engine"

[dependencies]
html-escape = { workspace = true }
handlebars = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest          = { workspace = true }
insta             = { workspace = true }
tempfile          = { workspace = true }

[[test]]
name = "template"
path = "tests/template.rs"
