[package]
name = "forge_test_kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode test utilities"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
json = ["serde", "serde_json"]
