[package]
name = "forge_test_kit"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode test utilities"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
json = ["serde", "serde_json"]

[dev-dependencies]
proptest   = { workspace = true }
insta      = { workspace = true }
tempfile   = { workspace = true }
assert_cmd = { workspace = true }

[[test]]
name = "kit_integration"
path = "tests/kit.rs"
