[package]
name = "forge_tool_macros"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro crate for ForgeCode tool description derives"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = "1"

[[test]]
name = "tool_macros_trybuild"
path = "tests/macros.rs"
