[package]
name = "forge_walker"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ForgeCode file walker"

[dependencies]
ignore = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
derive_setters = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
proptest          = { workspace = true }
insta             = { workspace = true }

[[test]]
name = "walker"
path = "tests/walker.rs"
